{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 131,
  "lineage": "1e5f356c-5c53-319a-839f-5b375ed84a08",
  "resources": [
    {
      "module": "module.ig",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:930329210350:internet-gateway/igw-0dfbb07c6ad3fd552",
            "id": "igw-0dfbb07c6ad3fd552",
            "owner_id": "930329210350",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-public-subnet",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-public-subnet",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0f2d866c12dd91083"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natgw",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a60de95016b3e8f5",
            "domain": "vpc",
            "id": "eipalloc-0678c20209ebbfa90",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0d3c82cb5c5c661c1",
            "private_dns": "ip-10-0-0-60.eu-west-1.compute.internal",
            "private_ip": "10.0.0.60",
            "public_dns": "ec2-54-155-40-187.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.155.40.187",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-eip",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-eip",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09ae22c9d6a89610e",
            "domain": "vpc",
            "id": "eipalloc-071608927fdc02d36",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0417c25a9bb72c252",
            "private_dns": "ip-10-0-1-70.eu-west-1.compute.internal",
            "private_ip": "10.0.1.70",
            "public_dns": "ec2-54-228-11-118.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.228.11.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-eip",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-eip",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01a9c5eeeb0a3f8ff",
            "domain": "vpc",
            "id": "eipalloc-09417e6fd1d34dfcd",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0fe9323dabeb1b5a7",
            "private_dns": "ip-10-0-2-225.eu-west-1.compute.internal",
            "private_ip": "10.0.2.225",
            "public_dns": "ec2-54-171-204-119.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.171.204.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-eip",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-eip",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natgw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0678c20209ebbfa90",
            "id": "nat-00cd87b037fcc482a",
            "network_interface_id": "eni-0d3c82cb5c5c661c1",
            "private_ip": "10.0.0.60",
            "public_ip": "54.155.40.187",
            "subnet_id": "subnet-001fd2c6a71135d6e",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-nat",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-nat",
              "Project": "sandbox build",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "module.natgw.aws_eip.eip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071608927fdc02d36",
            "id": "nat-084d5a761a7a10fda",
            "network_interface_id": "eni-0417c25a9bb72c252",
            "private_ip": "10.0.1.70",
            "public_ip": "54.228.11.118",
            "subnet_id": "subnet-05b6683c765d838f6",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-nat",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-nat",
              "Project": "sandbox build",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "module.natgw.aws_eip.eip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09417e6fd1d34dfcd",
            "id": "nat-096c39199bed0069c",
            "network_interface_id": "eni-0fe9323dabeb1b5a7",
            "private_ip": "10.0.2.225",
            "public_ip": "54.171.204.119",
            "subnet_id": "subnet-07915963ec4ef1c10",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-nat",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-nat",
              "Project": "sandbox build",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "module.natgw.aws_eip.eip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:930329210350:route-table/rtb-05b78c1c9cee9ce9d",
            "id": "rtb-05b78c1c9cee9ce9d",
            "owner_id": "930329210350",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00cd87b037fcc482a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-private-route-table",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-private-route-table",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0f2d866c12dd91083"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.natgw.aws_eip.eip",
            "module.natgw.aws_nat_gateway.natgw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:930329210350:route-table/rtb-06a298ef2d7754664",
            "id": "rtb-06a298ef2d7754664",
            "owner_id": "930329210350",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084d5a761a7a10fda",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-private-route-table",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-private-route-table",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0f2d866c12dd91083"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.natgw.aws_nat_gateway.natgw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.natgw.aws_eip.eip"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:930329210350:route-table/rtb-01c2c125bebf13e7d",
            "id": "rtb-01c2c125bebf13e7d",
            "owner_id": "930329210350",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-096c39199bed0069c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-private-route-table",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-private-route-table",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0f2d866c12dd91083"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.natgw.aws_eip.eip",
            "module.natgw.aws_nat_gateway.natgw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:930329210350:route-table/rtb-004fe0f56e6b0dde8",
            "id": "rtb-004fe0f56e6b0dde8",
            "owner_id": "930329210350",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dfbb07c6ad3fd552",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-public-route-table",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-public-route-table",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0f2d866c12dd91083"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.ig.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ca4c842016a7a04",
            "route_table_id": "rtb-05b78c1c9cee9ce9d",
            "subnet_id": "subnet-0b36ef88c1c1008b2"
          },
          "dependencies": [
            "module.natgw.aws_eip.eip",
            "module.natgw.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dbafc59f137a0e9",
            "route_table_id": "rtb-06a298ef2d7754664",
            "subnet_id": "subnet-06646430ce26e8325"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.natgw.aws_eip.eip",
            "module.natgw.aws_nat_gateway.natgw"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e4b14b91c0bf2f5",
            "route_table_id": "rtb-01c2c125bebf13e7d",
            "subnet_id": "subnet-00a8d61fcc5f4c8a5"
          },
          "dependencies": [
            "module.natgw.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.natgw.aws_eip.eip"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058684d4e884a1766",
            "route_table_id": "rtb-004fe0f56e6b0dde8",
            "subnet_id": "subnet-001fd2c6a71135d6e"
          },
          "dependencies": [
            "module.ig.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0527147c1a0e6c1c7",
            "route_table_id": "rtb-004fe0f56e6b0dde8",
            "subnet_id": "subnet-05b6683c765d838f6"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.ig.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007951f4f9580fb31",
            "route_table_id": "rtb-004fe0f56e6b0dde8",
            "subnet_id": "subnet-07915963ec4ef1c10"
          },
          "dependencies": [
            "module.ig.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:930329210350:subnet/subnet-0b36ef88c1c1008b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0b36ef88c1c1008b2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "930329210350",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-private-subnet",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-private-subnet",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0f2d866c12dd91083"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:930329210350:subnet/subnet-06646430ce26e8325",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-06646430ce26e8325",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "930329210350",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-private-subnet",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-private-subnet",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0f2d866c12dd91083"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:930329210350:subnet/subnet-00a8d61fcc5f4c8a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-00a8d61fcc5f4c8a5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "930329210350",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-private-subnet",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-private-subnet",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0f2d866c12dd91083"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:930329210350:subnet/subnet-001fd2c6a71135d6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-001fd2c6a71135d6e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "930329210350",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-public-subnet",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-public-subnet",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0f2d866c12dd91083"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:930329210350:subnet/subnet-05b6683c765d838f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05b6683c765d838f6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "930329210350",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-public-subnet",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-public-subnet",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0f2d866c12dd91083"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:930329210350:subnet/subnet-07915963ec4ef1c10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07915963ec4ef1c10",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "930329210350",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-public-subnet",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-public-subnet",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0f2d866c12dd91083"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:930329210350:vpc/vpc-0f2d866c12dd91083",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09bac0bdaab94ce4d",
            "default_route_table_id": "rtb-081aa3a3900060580",
            "default_security_group_id": "sg-0f60feb00ef5e4653",
            "dhcp_options_id": "dopt-c585b4a3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f2d866c12dd91083",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-081aa3a3900060580",
            "owner_id": "930329210350",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-vpc",
              "Project": "sandbox build",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Alejandro",
              "Name": "testing-DEMO-vpc",
              "Project": "sandbox build",
              "Terraform": "True"
            }
          }
        }
      ]
    }
  ]
}